--- a/styles.css
+++ b/styles.css
@@ -124,9 +124,23 @@ header {
     margin-bottom: 10px;
 }
 
+.products {
+    font-size: 1.3em;
+    color: #333; /* Standard text color */
+}
+
 .hero p {
     font-size: 1.2em;
     margin-bottom: 20px;
+}
+
+.benefits {
+    font-size: 1.3em;
+    color: #333; /* Standard text color */
+    text-align: left;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-right: 650px;
 }
 
 .button {
